[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moltwall"
version = "0.1.0b1"
description = "Real-time security firewall SDK for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "security", "firewall", "langchain", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []   # zero hard deps — httpx is optional for performance

[project.optional-dependencies]
httpx    = ["httpx>=0.27"]
langchain = ["langchain-core>=0.2", "httpx>=0.27"]
all      = ["httpx>=0.27", "langchain-core>=0.2"]

[project.urls]
Homepage    = "https://www.moltwall.xyz"
Repository  = "https://github.com/moltwall"
Docs        = "https://www.moltwall.xyz/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["moltwall*"]
